--- a/src/app/common/components/BrowserRoot/QuoteCard.scss
+++ b/src/app/common/components/BrowserRoot/QuoteCard.scss
@@ -3,8 +3,9 @@
         cssComponentId: quote-card_xa1fvt
 */
 
+@import '../../../../common/styles/colors';
+
 .quote-card_xa1vt {
-	box-shadow: 0px 0px 30px rgba(187, 187, 187, 0.25);
 
    p {
        font-size: 24px;
@@ -57,4 +58,11 @@
 //            font-size: 26.67px;
 //        }
 //    }
+}
+
+// light mode only
+@include theme-only(light) {
+	.quote-card_xa1vt {
+		box-shadow: 0px 0px 30px rgba(187, 187, 187, 0.25);
+	}
 }
